crates/iota-upgrade-compatibility-transactional-tests/tests/snapshots/tests__private_entry_and_friend_changes.snap
---
source: crates/iota-upgrade-compatibility-transactional-tests/tests/tests.rs
expression: results
---
====
Compatibility { check_struct_and_pub_function_linking: true, check_struct_layout: true, check_friend_linking: true, check_private_entry_linking: true, disallowed_new_abilities: [], disallow_change_struct_type_params: true }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: false
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_struct_and_pub_function_linking: true, check_struct_layout: true, check_friend_linking: true, check_private_entry_linking: false, disallowed_new_abilities: [Copy, Drop, Store, Key, ], disallow_change_struct_type_params: true }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: false
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_struct_and_pub_function_linking: true, check_struct_layout: true, check_friend_linking: false, check_private_entry_linking: false, disallowed_new_abilities: [Copy, Drop, Store, Key, ], disallow_change_struct_type_params: true }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_struct_and_pub_function_linking: true, check_struct_layout: true, check_friend_linking: false, check_private_entry_linking: true, disallowed_new_abilities: [Copy, Drop, Store, Key, ], disallow_change_struct_type_params: true }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_struct_and_pub_function_linking: false, check_struct_layout: false, check_friend_linking: false, check_private_entry_linking: false, disallowed_new_abilities: [], disallow_change_struct_type_params: false }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: true
	upgrade->base: true
========
Equal
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: false
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: false
	upgrade->base: false
====
====
Subset
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: false
	upgrade->base: false
0000000000000000000000000000000000000000000000000000000000000000::friend_module:
	base->upgrade: false
	upgrade->base: false
====
